--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<Header />
 		<main>
 			<section class="hero">
-				<h1>阿德的技术博客</h1>
+				<h1>阿德的博客</h1>
 				<p>记录技术成长，分享实践经验</p>
 			</section>
 			
